# running-playwright-tests-in-docker-container

./: .gitignore  .hadolint.yaml  .zshrc_ai_agents  CONTRIBUTING.md  README.md  last-conversation.md  previous.md
.github/: AGENTS.md  agents  agents-config.yaml  copilot-instructions.md  instructions  prompts
docs/: ARCHITECTURE.md  BEST_PRACTICES.md  TROUBLESHOOTING.md
docs/ARCHIVE/: ARM64_ISSUE_SUMMARY.md  SOLUTION.md
examples/python-uv-3.13/: .env.example  .gitignore  ARM64_ISSUE_SUMMARY.md  Dockerfile  Makefile  README.md  Taskfile.yml  build-and-test.sh  docker-compose.yml  entrypoint.sh  improvements-to-implement.md  pyproject.toml
examples/python-uv-3.13/.task/checksum/: build-chromium  build-firefox
examples/python-uv-3.13/src2/playwright_tests/: __init__.py
examples/python-uv-3.13/tests/: conftest.py  conftest_function_scope.py  test_github.py  test_google.py
